--- a/packages/style-default/src/container.styl
+++ b/packages/style-default/src/container.styl
@@ -1,5 +1,14 @@
+@import '../define.styl'
+
 .mn-container
   position relative
 
 .mn-container-inner
   height 100%
+  width 100%
+  overflow auto
+  overflow -moz-scrollbars-none
+  -ms-overflow-style none
+  &::-webkit-scrollbar
+    width 0 !important
+    height 0 !important
