--- a/packages/style-default/src/scrollbar.styl
+++ b/packages/style-default/src/scrollbar.styl
@@ -1,13 +1,47 @@
-.mn-scrollbar
+@import '../define.styl'
+
+.mn-scrollbar.vertical
   position absolute
   right 0
   top 0
   height 100%
-  width var(--ruler-scrollbar)
   box-sizing border-box
   padding 2px 3px 2px 1px
+  transition opacity 0.2s
+  overflow hidden
+  opacity 0
+  &:hover
+    opacity 1
+  .mn-scrollbar-thumb
+    width $scrollbar
+    height 100%
+    background-color var(--color-text-placeholder)
+    transition opacity 0.2s
+    opacity 0.5
+    &:hover
+      opacity 1
+    &.round
+      border-radius $scrollbarRadius
 
-.mn-scrollbar-thumb
+.mn-scrollbar.horizontal
+  position absolute
+  right 0
+  bottom 0
   width 100%
-  height 100%
-  background-color var(--color-text-placeholder)
+  box-sizing border-box
+  padding 1px 2px 3px
+  transition opacity 0.2s
+  overflow hidden
+  opacity 0
+  &:hover
+    opacity 1
+  .mn-scrollbar-thumb
+    height $scrollbar
+    width 100%
+    background-color var(--color-text-placeholder)
+    transition opacity 0.2s
+    opacity 0.5
+    &:hover
+      opacity 1
+    &.round
+      border-radius $scrollbarRadius
