--- a/packages/style-default/index.styl
+++ b/packages/style-default/index.styl
@@ -1,3 +1,5 @@
 @import './src/icon.styl'
 @import './src/container.styl'
 @import './src/header.styl'
+@import './src/aside.styl'
+@import './src/main.styl'
