--- a/packages/style-default/index.styl
+++ b/packages/style-default/index.styl
@@ -3,3 +3,5 @@
 @import './src/header.styl'
 @import './src/aside.styl'
 @import './src/main.styl'
+@import './src/footer.styl'
+@import './src/block.styl'
