--- a/packages/style-default/define.styl
+++ b/packages/style-default/define.styl
@@ -1,7 +1,25 @@
+/* types */
+$types = 'default', 'primary', 'success', 'warning', 'danger', 'info', 'text'
 /* font */
-$fontNormal = 14px
+$fontExtraSmall = 12px
+$fontSmall = 13px
+$fontBase = 14px
+$fontMedium = 16px
+$fontLarge = 18px
+$fontExtraLarge = 20px
+/* line-height */
+$lineHeightNone = 1
+$lineHeightCompact = 1.3
+$lineHeightNormal = 1.5
+$lineHeightLoose = 1.7
 /* border */
-$borderSolid = 1px solid
+$borderSolidWidth = 1px
+$borderDashedWidth = 2px
+$borderSolid = $borderSolidWidth solid
+$borderDashed = $borderDashedWidth dashed
+$borderRadiusNone = 0
+$borderRadiusSmall = 2px
+$borderRadiusLarge = 4px
 /* others */
 $scrollbar = 6px
 $scrollbarRadius = ($scrollbar / 2)
