--- a/packages/style-default/src/icon.styl
+++ b/packages/style-default/src/icon.styl
@@ -1,1 +1,8 @@
 @import '../define.styl'
+
+.mn-icon
+  display inline-block
+  vertical-align bottom
+  &.fixWidth
+    width 1.25em
+    text-align center
