--- a/packages/style-default/src/hanger.styl
+++ b/packages/style-default/src/hanger.styl
@@ -8,3 +8,58 @@
     border-radius $borderRadiusLarge
     .mn-hanger-inner
       margin $borderRadiusLarge 0
+    .mn-hanger-caption
+      margin 0 $borderRadiusLarge $borderRadiusLarge
+      border-radius $borderRadiusLarge
+
+.mn-hanger-caption
+  display flex
+  flex-direction row
+  justify-content center
+  align-items center
+  font-size $fontSmall
+  transition 0.2s
+
+for $type in $types
+  .mn-hanger-caption.{$type}
+    if ($type == 'default')
+      background var(--color-white)
+      color var(--color-text-regular)
+      &:hover, &:focus
+        background var(--color-primary-9)
+        color var(--color-primary-1)
+      &:active
+        background var(--color-primary-7)
+        color var(--color-primary-0)
+    else if ($type == 'text')
+      padding-left 0
+      padding-right 0
+      background none
+      color var(--color-primary-1)
+      text-shadow 0 0 var(--color-primary-1)
+      &:hover, &:focus
+        color var(--color-primary-3)
+      &:active
+        color var(--color-primary-0)
+    else
+      background var(replace('type', $type, --color-type-1))
+      color var(--color-white)
+      &:hover, &:focus
+        background var(replace('type', $type, --color-type-3))
+      &:active
+        background var(replace('type', $type, --color-type-0))
+      &.plain
+        background var(--color-primary-9)
+        color var(--color-primary-1)
+        &:hover, &:focus
+          background var(replace('type', $type, --color-type-1))
+          color var(--color-white)
+        &:active
+          background var(replace('type', $type, --color-type-0))
+
+.mn-hanger-caption__title
+  flex-grow 1
+
+.mn-hanger-content
+  transition 0.2s
+  overflow hidden
