--- a/packages/style-default/src/hanger.styl
+++ b/packages/style-default/src/hanger.styl
@@ -59,6 +59,8 @@ for $type in $types
 
 .mn-hanger-caption__title
   flex-grow 1
+  .mn-icon
+    margin-right 0.25em
 
 .mn-hanger-content
   transition 0.2s
