--- a/packages/style-default/src/icon.styl
+++ b/packages/style-default/src/icon.styl
@@ -3,6 +3,7 @@
 .mn-icon
   display inline-block
   vertical-align bottom
+  font-size $fontBase
   &.fixWidth
     width 1.25em
     text-align center
