--- a/packages/style-default/src/button.styl
+++ b/packages/style-default/src/button.styl
@@ -16,6 +16,7 @@
   padding $fontExtraSmall $fontExtraLarge
   font-size $fontBase
   border-radius $borderRadiusLarge
+  color var(--color-text-primary)
   .mn-icon
     font-size $fontBase
     margin-left: $fontBase * -0.35
