--- a/packages/style-default/src/container.styl
+++ b/packages/style-default/src/container.styl
@@ -4,6 +4,7 @@
   position relative
   box-sizing border-box
   margin 0 auto
+  color var(--color-text-primary)
   .mn-scrollbar
     position absolute
     right 0
