--- a/packages/style-default/src/hanger.styl
+++ b/packages/style-default/src/hanger.styl
@@ -1,7 +1,9 @@
 @import '../define.styl'
 
 .mn-hanger
+  color var(--color-text-primary)
   border $borderSolid var(--color-border-extra-light)
+  background var(--color-white)
   &.shadow
     box-shadow var(--shadow-light)
   &.round
