--- a/packages/style-default/src/sitename.styl
+++ b/packages/style-default/src/sitename.styl
@@ -6,6 +6,7 @@
   line-height $lineHeightNormal
   padding $borderRadiusLarge
   font-weight bold
+  color var(--color-text-primary)
 
 .mn-sitename-text
   position relative
