--- a/packages/style-default/index.styl
+++ b/packages/style-default/index.styl
@@ -6,6 +6,7 @@
 @import './src/footer.styl'
 @import './src/block.styl'
 @import './src/button.styl'
+@import './src/button-group.styl'
 @import './src/sitename.styl'
 @import './src/hanger.styl'
 @import './src/avatar.styl'
