--- a/packages/style-default/src/sitename.styl
+++ b/packages/style-default/src/sitename.styl
@@ -13,15 +13,10 @@
   z-index 1
   color var(--color-white)
 
-.mn-sitename-prepend
-  margin-right: $borderRadiusLarge * 2
-
-.mn-sitename-append
-  margin-left: $borderRadiusLarge * 2
-
 .mn-sitename-prepend, .mn-sitename-append
   position relative
   display inline-block
+  margin 0 $borderRadiusLarge * 2
   &:after
     content ''
     position absolute
