--- a/packages/style-default/src/container.styl
+++ b/packages/style-default/src/container.styl
@@ -5,6 +5,8 @@
   box-sizing border-box
   margin 0 auto
   color var(--color-text-primary)
+  font-size $fontBase
+  line-height $lineHeightNormal
   .mn-scrollbar
     position absolute
     right 0
