--- a/packages/style-default/src/hanger.styl
+++ b/packages/style-default/src/hanger.styl
@@ -61,7 +61,7 @@ for $type in $types
 
 .mn-hanger-caption__title
   flex-grow 1
-  .mn-icon
+  [class*='mn-icon']
     margin-right 0.25em
 
 .mn-hanger-content
