--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -6,3 +6,6 @@ body
   background var(--color-white)
   @media (max-width 768px)
     margin 8px 0
+
+.mn-main-inner, .mn-footer-inner
+  overflow-x hidden
