--- a/packages/style-default/index.styl
+++ b/packages/style-default/index.styl
@@ -11,3 +11,6 @@
 @import './src/hanger.styl'
 @import './src/avatar.styl'
 @import './src/cloud.styl'
+@import './src/menu.styl'
+@import './src/menu-item.styl'
+@import './src/submenu.styl'
