--- a/packages/style-default/src/icon.styl
+++ b/packages/style-default/src/icon.styl
@@ -1,9 +1,14 @@
 @import '../define.styl'
 
 .mn-icon
-  display inline-block
-  vertical-align bottom
   font-size $fontBase
+  -webkit-font-smoothing antialiased
+  display inline-block
+  font-style normal
+  font-variant normal
+  text-rendering auto
+  vertical-align text-bottom
+  line-height $lineHeightNone
   &.fixWidth
     width 1.25em
     text-align center
