--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -5,7 +5,11 @@ body
   margin 36px 0
   background var(--color-white)
   @media (max-width 768px)
-    margin 8px 0
+    margin 8px 0 !important
 
 .mn-main-inner, .mn-footer-inner
   overflow-x hidden
+
+@media (max-width 768px)
+  .endFooter .mn-hanger
+    margin-bottom 0 !important
