--- a/packages/style-default/src/cloud.styl
+++ b/packages/style-default/src/cloud.styl
@@ -16,7 +16,9 @@
   display flex
   flex-direction column
   flex-wrap wrap
+  padding-left 1em
   .mn-cloud-item
+    display list-item
     position relative
     width fit-content
     margin 0.2em 0
