--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -13,3 +13,32 @@ body
 @media (max-width 768px)
   .endFooter .mn-hanger
     margin-bottom 0 !important
+
+.markdown-body
+  font-size 15px
+  a
+    &:hover
+      text-decoration none
+  code
+    background-color var(--color-border-lighter)
+    position relative
+    top -0.1em
+    padding 0.1em 0.3em
+
+div[class*='language-']
+  margin-bottom 1.7em
+  font-size 13px
+  .highlight-lines
+    padding-top 1em
+  &.line-numbers-mode
+    .line-numbers-wrapper
+      padding-top 1em
+      padding-bottom 1em
+  code
+    background-color initial
+    position initial
+    padding 0
+
+code[class*='language-'], pre[class*='language-']
+  font-size 13px
+  line-height 1.4
