--- a/packages/style-default/src/container.styl
+++ b/packages/style-default/src/container.styl
@@ -31,7 +31,7 @@
         height $scrollbar
         width 100%
     .mn-scrollbar-thumb
-      background-color var(--color-text-placeholder)
+      background-color var(--color-text-secondary)
       transition opacity 0.2s, height 0.2s, width 0.2s
       opacity 0.5
       &:hover
