--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -5,7 +5,7 @@ body
   margin 36px 0
   background var(--color-white)
   @media (max-width 768px)
-    margin 8px 0 !important
+    margin 8px 0 0 !important
 
 .mn-main-inner, .mn-footer-inner
   overflow-x hidden
@@ -16,6 +16,9 @@ body
 
 .markdown-body
   font-size 15px
+  h1, h2, h3, h4, h5, h6
+    padding-bottom 10px
+    padding-top 16px
   a
     &:hover
       text-decoration none
