--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -31,6 +31,11 @@ body
 div[class*='language-']
   margin-bottom 1.7em
   font-size 13px
+  margin-left -40px
+  margin-right -40px
+  padding-left 40px
+  padding-right 40px
+  border-radius 0
   .highlight-lines
     padding-top 1em
   &.line-numbers-mode
