--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -14,7 +14,7 @@ body
   .endFooter .mn-hanger
     margin-bottom 0 !important
 
-.markdown-body
+.post-body
   font-size 15px
   h1, h2, h3, h4, h5, h6
     padding-bottom 10px
@@ -23,7 +23,7 @@ body
     &:hover
       text-decoration none
   code
-    background-color var(--color-border-lighter)
+    background-color var(--color-border-light)
     position relative
     top -0.1em
     padding 0.1em 0.3em
@@ -33,20 +33,54 @@ div[class*='language-']
   font-size 13px
   margin-left -40px
   margin-right -40px
-  padding-left 40px
-  padding-right 40px
   border-radius 0
   .highlight-lines
     padding-top 1em
+  &:before
+    box-sizing border-box
+    min-width 40px
+    line-height 1.7
+    text-align center
+    top 0
+    right 0
+    padding 0 6px
+    background-color var(--color-primary-0)
+    color var(--color-white)
+    border-radius 0 0 0 2px
+    transition 0.6s
+  &:hover:before
+    opacity 0
   &.line-numbers-mode
+    &:after
+      width 40px
+      border-radius 0
     .line-numbers-wrapper
+      width 40px
       padding-top 1em
       padding-bottom 1em
   code
     background-color initial
     position initial
     padding 0
+  pre[class*='language-']
+    padding-left 56px
+    padding-right 56px
 
 code[class*='language-'], pre[class*='language-']
   font-size 13px
   line-height 1.4
+
+@media (max-width 540px)
+  .post-body
+    h1, h2, h3, h4, h5, h6
+      padding-bottom 0
+      padding-top 0
+  div[class*='language-']
+    &:before
+      right 40px
+    pre[class*='language-']
+      padding-left 40px
+      padding-right 40px
+    &.line-numbers-mode
+      &:after, .line-numbers-wrapper
+        display none
