--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -1,6 +1,12 @@
 body
   margin 0
 
+.fade-enter-active, .fade-leave-active
+  transition opacity 0.5s
+
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */
+  opacity 0
+
 .mn-hanger
   margin 36px 0
   background var(--color-white)
