--- a/packages/style-default/src/audio.styl
+++ b/packages/style-default/src/audio.styl
@@ -2,6 +2,15 @@
 
 .mn-audio
   position relative
+  .mn-audio-inner
+    display flex
+    flex-direction row
+    &.reverse
+      flex-direction row-reverse
+    &.vertical
+      flex-direction column
+      &.reverse
+        flex-direction column-reverse
   .mn-audio-left
     box-sizing border-box
   .mn-audio-button
@@ -42,6 +51,8 @@
       background-color var(--color-text-regular)
   .mn-audio-list-item
     padding 8px 0
+    display flex
+    flex-direction row
     white-space nowrap
     border-bottom $borderSolid var(--color-border-light)
     cursor pointer
