--- a/packages/style-default/index.styl
+++ b/packages/style-default/index.styl
@@ -17,3 +17,5 @@
 @import './src/post-card.styl'
 @import './src/going-to.styl'
 @import './src/audio.styl'
+@import './src/panel.styl'
+@import './src/panel-item.styl'
