--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -2,10 +2,21 @@ body
   margin 0
 
 .fade-enter-active, .fade-leave-active
-  transition opacity 0.5s
+  transition opacity 0.6s
 
 .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */
   opacity 0
+
+.curtion-enter-active, .curtion-leave-active
+  transition opacity 0.2s, transform 0.2s
+
+.curtion-enter
+  transform translateY(-100%)
+  opacity 1
+
+.curtion-leave-to /* .fade-leave-active below version 2.1.8 */
+  opacity 0
+  transform translateY(0)
 
 .mn-hanger
   margin 36px 0
