--- a/packages/style-default/src/container.styl
+++ b/packages/style-default/src/container.styl
@@ -47,6 +47,7 @@
   overflow auto
   overflow -moz-scrollbars-none
   -ms-overflow-style none
+  box-sizing border-box
   &::-webkit-scrollbar
     width 0 !important
     height 0 !important
