--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -1,5 +1,7 @@
 body
   margin 0
+  font-family -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif
+  -webkit-font-smoothing antialiased
 
 .fade-enter-active, .fade-leave-active
   transition opacity 0.6s
@@ -11,8 +13,8 @@ body
   transition opacity 0.2s, transform 0.2s
 
 .curtion-enter
-  transform translateY(-100%)
-  opacity 1
+  transform translateY(100%)
+  opacity 0
 
 .curtion-leave-to /* .fade-leave-active below version 2.1.8 */
   opacity 0
