--- a/packages/style-default/src/submenu.styl
+++ b/packages/style-default/src/submenu.styl
@@ -69,4 +69,5 @@
       background var(--color-primary-9)
     &.exactActive
       color var(--color-white)
+      text-shadow 1px 1px var(--color-text-primary)
       background var(--color-primary-1)
