--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -1,10 +1,8 @@
 body
   margin 0
-  font-family -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif
-  -webkit-font-smoothing antialiased
 
 .fade-enter-active, .fade-leave-active
-  transition opacity 0.6s
+  transition opacity 0.2s
 
 .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */
   opacity 0
@@ -103,3 +101,5 @@ code[class*='language-'], pre[class*='language-']
     &.line-numbers-mode
       &:after, .line-numbers-wrapper
         display none
+
+@import '../../packages/theme-default/dark.styl'
